# GainPilot

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml  release.yml
include/gainpilot/: parameters.hpp  state.hpp  version.hpp.in
include/gainpilot/dsp/: biquad.hpp  k_weighting_filter.hpp  loudness_meter.hpp  processor.hpp  true_peak_limiter.hpp
include/gainpilot/ui/: editor_panel.hpp  gtk_editor.hpp  wx_runtime.hpp
include/gainpilot/vst3/: plugin_ids.hpp
lv2/: manifest.ttl.in  plugin.ttl.in  ui.ttl.in
scripts/: collect_reaper_coredump.sh
src/dsp/: k_weighting_filter.cpp  loudness_meter.cpp  processor.cpp  true_peak_limiter.cpp
src/lv2/: plugin.cpp  ui.cpp
src/ui/: editor_panel.cpp  gtk_editor.cpp  wx_runtime.cpp
src/vst3/: README.md  common.cpp  common.hpp  controller.cpp  controller.hpp  entry.cpp  gtk_view.cpp  gtk_view.hpp  mac_view.hpp  mac_view.mm  plugin.cpp  plugin.hpp  wx_view.cpp  wx_view.hpp
tests/: lv2_state_smoke.cpp  smoke.cpp
